--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="particles"></div>
 
-    <div class="container" id="main-app-container" style="display: block !important;">
+    <div class="container" id="main-app-container" style="display: none;">
         <header class="header">
             <div class="logo" role="banner" aria-label="Arcade Ascend Logo">
                 Arcade Ascend
@@ -68,7 +68,7 @@
         <button id="playBtn" class="play-button" aria-label="Play Game">PLAY</button>
     </div>
 
-    <div class="auth-modal" id="authModal" style="display: flex !important;">
+    <div class="auth-modal" id="authModal" style="display: none;">
         <div class="auth-content">
             <button class="auth-close-btn" id="authCloseBtn" aria-label="Close Authentication Modal">&times;</button>
             <h2 class="auth-title">Welcome to Arcade Ascend!</h2>
@@ -81,7 +81,7 @@
                 </div>
                 <div class="form-group">
                     <label for="loginPassword">Password:</label>
-                    <password id="loginPassword" placeholder="Enter your password" aria-label="Login Password" required></password>
+                    <input type="password" id="loginPassword" placeholder="Enter your password" aria-label="Login Password" required>
                 </div>
                 <button id="loginBtn" class="auth-btn">Login</button>
                 <p class="auth-toggle">Don't have an account? <a href="#" id="toggleRegister">Register here</a>.</p>
@@ -96,7 +96,7 @@
                 </div>
                 <div class="form-group">
                     <label for="registerPassword">Password:</label>
-                    <password id="registerPassword" placeholder="Choose a password" aria-label="Register Password" required></password>
+                    <input type="password" id="registerPassword" placeholder="Choose a password" aria-label="Register Password" required>
                 </div>
                 <button id="registerBtn" class="auth-btn">Register</button>
                 <p class="auth-toggle">Already have an account? <a href="#" id="toggleLogin">Login here</a>.</p>
